--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <header class="header">
-    <img  draggable="false" src="./logo.svg" alt="logo" />
+    <img draggable="false" src="./logo.svg" alt="logo" />
     <p class="header_text">
       Ассоциация международных автомобильных перевозчиков
     </p>
@@ -22,12 +23,20 @@
       <div class="first-background"></div>
       <section class="section">
         <div class="card-wrapper">
+          <div class="card"></div>
           <div class="card">
-          </div>
-          <div class="card">
-            <a draggable="false" target="_blank" href="https://www.asmap-service.ru/catalog/komplekty_i_sostavlyayushchie_adr/komplekt_adr_klassy_3_4_8_9_nefteprodukty/">
-            <img class="card-image" src="https://www.asmap-service.ru/upload/iblock/ec3/y72cuq92bd6dylra85xsjeiitc1343nu.jpg" alt="adr комплект" draggable="false" >
-          </a>
+            <a
+              draggable="false"
+              target="_blank"
+              href="https://www.asmap-service.ru/catalog/komplekty_i_sostavlyayushchie_adr/komplekt_adr_klassy_3_4_8_9_nefteprodukty/"
+            >
+              <img
+                class="card-image"
+                src="https://www.asmap-service.ru/upload/iblock/ec3/y72cuq92bd6dylra85xsjeiitc1343nu.jpg"
+                alt="adr комплект"
+                draggable="false"
+              />
+            </a>
           </div>
           <div class="card">Контент</div>
           <div class="card">Контент</div>
@@ -39,13 +48,28 @@
       </section>
       <section class="section promo-section">
         <div class="card-wrapper">
-          <p class="promo-text">Запчасти и комплектующие для грузовых и легковых автомобилей, широкий выбор различных аксессуаров</p>
+          <p class="promo-text">
+            Запчасти и комплектующие для грузовых и легковых автомобилей,
+            широкий выбор различных аксессуаров
+          </p>
           <p class="promo-text">Автомасла</p>
-          <p class="promo-text">Информационно-справочная литература, бланки, дорожные карты России и Европы, журналы, накладные</p>
-          <p class="promo-text">Доставка по Москве собственной курьерской службой</p>
-          <p class="promo-text">Доставка по России надежными партнерскими курьерскими службами</p>
-          <p class="promo-text">Бесплатный самовывоз с нашего склада в Москве</p>
-          <p class="promo-text">Удобная онлайн-оплата товаров либо оплата по выставленному счету</p>
+          <p class="promo-text">
+            Информационно-справочная литература, бланки, дорожные карты России и
+            Европы, журналы, накладные
+          </p>
+          <p class="promo-text">
+            Доставка по Москве собственной курьерской службой
+          </p>
+          <p class="promo-text">
+            Доставка по России надежными партнерскими курьерскими службами
+          </p>
+          <p class="promo-text">
+            Бесплатный самовывоз с нашего склада в Москве
+          </p>
+          <p class="promo-text">
+            Удобная онлайн-оплата товаров либо оплата по выставленному счету
+          </p>
+        </div>
       </section>
     </main>
   </body>
@@ -133,10 +157,6 @@
     border-radius: 15px;
     object-fit: cover;
   }
-
-  
-
-
 
   @media only screen and (max-width: 1024px) {
   }
