--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <header class="header">
-    <img draggable="false" src="./logo.svg" alt="logo" />
+    <img
+      draggable="false"
+      src="https://www.asmap-service.ru/local/templates/asmap/assets/img/logo.svg"
+      alt="logo"
+    />
     <p class="header_text">
       Ассоциация международных автомобильных перевозчиков
     </p>
