--- a/index-email.html
+++ b/index-email.html
@@ -152,10 +152,12 @@
             <tr>
               <td>
                 <img
+                  class="logo"
                   draggable="false"
-                  src="https://www.asmap-service.ru/local/templates/asmap/assets/img/logo.svg"
+                  src="https://www.asmap-service.ru/local/templates/asmap/assets/img/footer_logo.svg"
                   alt="logo"
                 />
+
                 <p class="header_text">
                   Ассоциация международных автомобильных перевозчиков
                 </p>
@@ -171,7 +173,7 @@
                 <div class="section">
                   <div class="banner">
                     <img
-                      src="./фрейм 2.svg"
+                      src="https://i.postimg.cc/RhSPw34k/banner.png"
                       alt="Большой баннер"
                       draggable="false"
                     />
