fixed err of mark_4

--- a/index-email.html
+++ b/index-email.html
@@ -28,14 +28,13 @@
         -ms-interpolation-mode: bicubic;
       }
       body {
-        margin: 0;
         padding: 0;
         width: 100% !important;
         height: 100% !important;
         font-family: Arial, sans-serif;
         background-color: #f4f4f4;
         /* max-width: 590px; */
-        /* margin: 0 auto; */
+        margin: 0 auto;
       }
       .content {
         width: 100%;
@@ -153,7 +152,7 @@
       .product-button {
         display: inline-block;
         padding: 10px 90px;
-        background-color: #004488b4;
+        background-color: #004488;
         color: #fff;
         text-decoration: none;
       }
