--- a/index-email.html
+++ b/index-email.html
@@ -39,6 +39,7 @@
       td,
       tr,
       tbody {
+        border-collapse: collapse;
         padding: 0;
         margin: 0;
         outline: none;
@@ -61,6 +62,7 @@
         width: 100%;
         margin: 0 auto;
         text-align: center;
+        border-collapse: collapse;
       }
 
       .header {
@@ -80,12 +82,14 @@
       }
       .section {
         margin: 0 auto;
+        border-collapse: collapse;
       }
       .banner {
         width: 100%;
         max-width: 600px;
         margin: 0px auto 0;
         overflow: hidden;
+        border-collapse: collapse;
       }
       .banner img {
         width: 100%;
@@ -173,6 +177,10 @@
         }
       }
       /* стили карточек */
+
+      .logo-footer {
+        padding-top: 10px;
+      }
 
       .footer {
         background-color: #004388;
