--- a/index-email.html
+++ b/index-email.html
@@ -406,20 +406,24 @@
 
                 <!-- Promotional Text Section -->
                 <div class="promo-section">
-                  <h3 style="font-size: 20px; color: #004388">
+                  <h3
+                    style="font-size: 20px; color: #004388; text-align: center"
+                  >
                     Почему стоит выбрать нас?
                   </h3>
-                  <p class="promo-text">
-                    Широкий выбор запчастей и комплектующих для грузовых
-                    автомобилей.
-                  </p>
-                  <p class="promo-text">
-                    Удобная онлайн-оплата товаров и быстрая доставка по всей
-                    России.
-                  </p>
-                  <p class="promo-text">
-                    Профессиональное обслуживание и поддержка клиентов.
-                  </p>
+                  <ol style="width: fit-content; margin: 0 auto">
+                    <li class="promo-text">
+                      Широкий выбор запчастей и комплектующих для грузовых
+                      автомобилей.
+                    </li>
+                    <li class="promo-text">
+                      Удобная онлайн-оплата товаров и быстрая доставка по всей
+                      России.
+                    </li>
+                    <li class="promo-text">
+                      Профессиональное обслуживание и поддержка клиентов.
+                    </li>
+                  </ol>
                 </div>
               </td>
             </tr>
